# raspberry-eye

./: .gitignore  Cargo.toml  HARDWARE.md  LICENSE  QUICKSTART.md  README.md  install.sh  raspberry-eye.service  requirements.txt  run.sh
scripts/: capture.py
src/: camera.rs  config.rs  discord.rs  main.rs  motion.rs
