[package]
name = "raspberry-eye"
version = "0.1.0"
edition = "2021"
authors = ["Sahand Setareh"]
description = "Motion-triggered detection, imaging and notification for home security"
license = "MIT"

[dependencies]
# GPIO library for Raspberry Pi
rppal = "0.19"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client for Discord webhooks
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"

# Time handling
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
